--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
         "@emotion/styled": "^11.14.0",
         "@mui/icons-material": "^6.3.0",
         "@mui/material": "^6.3.0",
+        "lodash": "^4.17.21",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-grid-layout": "^1.5.0",
-        "react-router-dom": "^7.1.1"
+        "react-router-dom": "^7.1.1",
+        "styled-components": "^6.1.13"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
