--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@mui/icons-material": "^6.3.0",
         "@mui/material": "^6.3.0",
         "lodash": "^4.17.21",
+        "lucide-react": "^0.469.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-grid-layout": "^1.5.0",
