--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@emotion/styled": "^11.14.0",
         "@mui/icons-material": "^6.3.0",
         "@mui/material": "^6.3.0",
+        "axios": "^1.7.9",
+        "jose": "^5.9.6",
         "lodash": "^4.17.21",
         "lucide-react": "^0.469.0",
         "react": "^18.3.1",
@@ -24,6 +26,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
+        "@types/jsonwebtoken": "^9.0.7",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
         "@vitejs/plugin-react": "^4.3.4",
