--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ dist-ssr
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+src/assets/Files/CurriculumVitae-DavidOshidero.docx
 .idea
 .DS_Store
 *.suo
