--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
         "@emotion/styled": "^11.14.0",
         "@mui/icons-material": "^6.3.0",
         "@mui/material": "^6.3.0",
+        "@react-three/drei": "^9.121.3",
+        "@react-three/fiber": "^8.17.12",
         "axios": "^1.7.9",
+        "framer-motion": "^12.0.1",
         "jose": "^5.9.6",
         "lodash": "^4.17.21",
         "lucide-react": "^0.469.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-error-boundary": "^5.0.0",
         "react-grid-layout": "^1.5.0",
         "react-router-dom": "^7.1.1",
-        "styled-components": "^6.1.13"
+        "styled-components": "^6.1.13",
+        "three": "^0.172.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
