--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react-error-boundary": "^5.0.0",
         "react-grid-layout": "^1.5.0",
         "react-router-dom": "^7.1.1",
+        "react-whs": "^0.1.9",
         "styled-components": "^6.1.13",
         "three": "^0.172.0"
     },
