--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
 REACT_APP_WEATHER_API_KEY=your_api_key_here
+
+VITE_SPOTIFY_CLIENT_ID=
+VITE_SPOTIFY_CLIENT_SECRET=
+VITE_SPOTIFY_REFRESH_TOKEN=
+
+VITE_APPLE_TEAM_ID=your_team_id
+VITE_APPLE_KEY_ID=your_key_id
+VITE_APPLE_PRIVATE_KEY=MIGTAgEAMBMG...your_base64_encoded_private_key...
