--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,5 @@
-[[redirects]]
-  from = "/*"
-  to = "/"
-  status = 200
+[build]
+  command = "npm run build"
+  functions = "functions"
+  publish = "dist"
+
