--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-  node_version = "18"
-  command = "npm run build"
+  command = """
+  npm run build
+  """
+  functions = "functions"
   publish = "dist"
-
