--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "eslint-plugin-react-refresh": "^0.4.16",
         "globals": "^15.14.0",
         "postcss": "^8.4.49",
+        "rollup": "^4.32.1",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0.5"
     }
